mentor list updated

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 								faculty members and some Govt. officials from the Higher Secondary
 								department.
 							</p>
-							<ul class="block-tab">
+							<ul class="block-tab mt-30">
 								<!--Tab-->
 								<li class="active ">
 									<div class="block-date"><i></i><strong class ="gradient-text" style="text-align:center">See the list of mentors</strong> <span style="padding-left: 20px;"></span></div>
@@ -1098,6 +1098,7 @@
                     <div>Angul</div><br>
 					<ul>
 						<li>Prof. Ajay Ku. Dash</li>
+						<li>Prof. Shanta Kumari Sunanda</li>
 						<li>Madhushree Kuanr (Email: <a href="mailto:c119002@iiit-bh.ac.in" target="_blank">c119002@iiit-bh.ac.in</a>)</li>
 						<li>Swastik Singh (Email: <a href="mailto:b520061@iiit-bh.ac.in" target="_blank">b520061@iiit-bh.ac.in</a>)</li>
 						<li>Raj Alpha Swain (Email: <a href="mailto:b321028@iiit-bh.ac.in" target="_blank">b321028@iiit-bh.ac.in</a>)</li>
@@ -1114,6 +1115,7 @@
                     <div>Boudh</div><br>
 					<ul>
 						<li>Prof. Usharani Rout</li>
+						<li>Prof. Rupaj Kumar Nayak</li>
 						<li>Sunil Samanta Singhar (Email: <a href="mailto:c119004@iiit-bh.ac.in" target="_blank">c119004@iiit-bh.ac.in</a>)</li>
 						<li>Raj Aryan (Email: <a href="mailto:b120048@iiit-bh.ac.in" target="_blank">b120048@iiit-bh.ac.in</a>)</li>
 						<li>Abhay Rajpoot (Email: <a href="mailto:b421003@iiit-bh.ac.in" target="_blank">b421003@iiit-bh.ac.in</a>)</li>
@@ -1130,6 +1132,7 @@
                     <div>Balangir</div><br>
 					<ul>
 						<li>Prof. Rakesh Ku. Lenka</li>
+						<li>Prof. Bamadev Sahoo</li>
 						<li>Saummit Kanoongo (Email: <a href="mailto:c120004@iiit-bh.ac.in" target="_blank">c120004@iiit-bh.ac.in</a>)</li>
 						<li>Naman Goyal (Email: <a href="mailto:b520031@iiit-bh.ac.in" target="_blank">b520031@iiit-bh.ac.in</a>)</li>
 						<li>Santanu Mohapatra (Email: <a href="mailto:b521051@iiit-bh.ac.in" target="_blank">b521051@iiit-bh.ac.in</a>)</li>
@@ -1145,6 +1148,7 @@
                 <div class="problem">
                     <div>Baragarh</div><br>
 					<ul>
+						<li>Prof. Alok Ranjan Nayak</li>
 						<li>Prof. Biswa Ranjan Pattnaik</li>
 						<li>Sidharth Samantray(Email: <a href="mailto:c122005@iiit-bh.ac.in" target="_blank">c122005@iiit-bh.ac.in</a>)</li>
 						<li>Satyaprakash Sahoo(Email: <a href="mailto:b220049@iiit-bh.ac.in" target="_blank">b220049@iiit-bh.ac.in</a>)</li>
@@ -1162,6 +1166,7 @@
                     <div>Baleshwar</div><br>
 					<ul>
 						<li>Prof. Muktikanta Sahoo</li>
+						<li>Prof. Rakesh Chandra Balabantaray</li>
 						<li>Subham Kumar Padhy(Email: <a href="mailto:c120006@iiit-bh.ac.in" target="_blank">c120006@iiit-bh.ac.in</a>)</li>
 						<li>Shripati Pandey(Email: <a href="mailto:b220052@iiit-bh.ac.in" target="_blank">b220052@iiit-bh.ac.in</a>)</li>
 						<li>Bishmay Kumar Padhi(Email: <a href="mailto:b321012@iiit-bh.ac.in" target="_blank">b321012@iiit-bh.ac.in</a>)</li>
@@ -1177,7 +1182,8 @@
                 <div class="problem">
                     <div>Bhadrak</div><br>
 					<ul>
-						<li>Prof.Soubhagya Ranjan Mahalik</li>
+						<li>Prof. Soubhagya Ranjan Mahalik</li>
+						<li>Prof. Sikha Vato</li>
 						<li>Subhranshu Sekhar Pati(Email: <a href="mailto:c12007@iiit-bh.ac.in" target="_blank">c12007@iiit-bh.ac.in</a>)</li>
 						<li>Saswat Samal(Email: <a href="mailto:b120055@iiit-bh.ac.in" target="_blank">b120055@iiit-bh.ac.in</a>)</li>
 						<li>Rohan Kumar Mohanty(Email: <a href="mailto:b121045@iiit-bh.ac.in" target="_blank">b121045@iiit-bh.ac.in</a>)</li>
@@ -1194,6 +1200,7 @@
                     <div>Cuttack</div><br>
 					<ul>
 						<li>Prof. Anjali Mohapatra</li>
+						<li>Prof. Biswajit Pradhan</li>
 						<li>Trilochan Rout(Email: <a href="mailto:c120008@iiit-bh.ac.in" target="_blank">c120008@iiit-bh.ac.in</a>)</li>
 						<li>Muskan Sahoo(Email: <a href="mailto:b120035@iiit-bh.ac.in" target="_blank">b120035@iiit-bh.ac.in</a>)</li>
 						<li>Shubank Nagar(Email: <a href="mailto:b421048@iiit-bh.ac.in" target="_blank">b421048@iiit-bh.ac.in</a>)</li>
@@ -1210,6 +1217,7 @@
                     <div>Debagarh</div><br>
 					<ul>
 						<li>Prof. Surya Narayan Mohapatra</li>
+						<li>Prof. Lipika Das</li>
 						<li>Priya Mishra(Email: <a href="mailto:c121008@iiit-bh.ac.in" target="_blank">c121008@iiit-bh.ac.in</a>)</li>
 						<li>CV Anish(Email: <a href="mailto:b120018@iiit-bh.ac.in" target="_blank">b120018@iiit-bh.ac.in</a>)</li>
 						<li>Soumesh Mohanty(Email: <a href="mailto:b121058@iiit-bh.ac.in" target="_blank">b121058@iiit-bh.ac.in</a>)</li>
@@ -1225,6 +1233,7 @@
                 <div class="problem">
                     <div>Dhenkanal</div><br>
 					<ul>
+						<li>Prof. Hiranmayee Satpathy</li>
 						<li>Prof. Sarthak Padhi</li>
 						<li>Sagarika Patro(Email: <a href="mailto:c121010@iiit-bh.ac.in" target="_blank">c121010@iiit-bh.ac.in</a>)</li>
 						<li>Harshit Singh(Email: <a href="mailto:b120026@iiit-bh.ac.in" target="_blank">b120026@iiit-bh.ac.in</a>)</li>
@@ -1257,7 +1266,7 @@
                 <div class="problem">
                     <div>Gajapati</div><br>
 					<ul>
-						<li>Prof. Hemanata Pati</li>
+						<li>Prof. Hemanta Pati</li>
 						<li>Vikash Ranjan(Email: <a href="mailto:c121015@iiit-bh.ac.in" target="_blank">c121015@iiit-bh.ac.in</a>)</li>
 						<li>Vishal Manam(Email: <a href="mailto:b420065@iiit-bh.ac.in" target="_blank">b420065@iiit-bh.ac.in</a>)</li>
 						<li>P Navya Preetam Reddy(Email: <a href="mailto:b121034@iiit-bh.ac.in" target="_blank">b121034@iiit-bh.ac.in</a>)</li>
@@ -1290,7 +1299,7 @@
                     <div>Jajpur</div><br>
 					<ul>
 						<li>Prof. Sabyasachi Patra</li>
-						<li>Ipsita Behera(Email: <a href="mailto:c122004@iiit-bh.ac.in" target="_blank">c122004@iiit-bh.ac.in</a>)</li>
+						<li>Kalpana Samal(Email: <a href="mailto:c521001@iiit-bh.ac.in" target="_blank">c521001@iiit-bh.ac.in</a>)</li>
 						<li>Pranav Patel(Email: <a href="mailto:b120044@iiit-bh.ac.in" target="_blank">b120044@iiit-bh.ac.in</a>)</li>
 						<li>Prince Pious Omm Prakash(Email: <a href="mailto:b221042@iiit-bh.ac.inb122039@iiit-bh.ac.in" target="_blank">b221042@iiit-bh.ac.inb122039@iiit-bh.ac.in</a>)</li>
 						<li>Biswa Prakash Dalai(Email: <a href="mailto:b122039@iiit-bh.ac.in" target="_blank">b122039@iiit-bh.ac.in</a>)</li>
@@ -1339,7 +1348,7 @@
                     <div>Kendujhar</div><br>
 					<ul>
 						<li>Prof. Rajat Ku. Giri</li>
-						<li>Subhra Mohanty</li>
+						<li>Subhra Mohanty(Email: <a href="mailto:c122012@iiit-bh.ac.in" target="_blank">c122012@iiit-bh.ac.in</a>)</li>
 						<li>Pratham Biswal(Email: <a href="mailto:b220037@iiit-bh.ac.in" target="_blank">b220037@iiit-bh.ac.in</a>)</li>
 						<li>Roshan Dash(Email: <a href="mailto:b121046@iiit-bh.ac.in" target="_blank">b121046@iiit-bh.ac.in</a>)</li>
 						<li>Rajesh Kumar Jena(Email: <a href="mailto:b122088@iiit-bh.ac.in" target="_blank">b122088@iiit-bh.ac.in</a>)</li>
@@ -1419,7 +1428,7 @@
                     <div>Malkangiri</div>
 					<br>
 					<ul>
-						<li>Prof.  Surya Prakash Singh</li>
+						<li>Prof. Surya Prakash Singh</li>
 						<li>Asit Kumar Mishra(Email: <a href="mailto:c122002@iiit-bh.ac.in" target="_blank">c122002@iiit-bh.ac.in</a>)</li>
 						<li>Sandip Ranjan Behera(Email: <a href="mailto:b320043@iiit-bh.ac.in" target="_blank">b320043@iiit-bh.ac.in</a>)</li>
 						<li>Pratik Ranjan Sahu(Email: <a href="mailto:b421034@iiit-bh.ac.in" target="_blank">b421034@iiit-bh.ac.in</a>)</li>
@@ -1437,7 +1446,7 @@
 					<br>
 					<ul>
 						<li>Prof. Venkata Sridhar T.</li>
-						<li>Ayusman Kitu Biswal(Email: <a href="mailto:c519003@iiit-bh.ac.in" target="_blank">c519003@iiit-bh.ac.in</a>)</li>
+						<li>Nirakar Sahoo(Email: <a href="mailto:c519001@iiit-bh.ac.in" target="_blank">c519001@iiit-bh.ac.in</a>)</li>
 						<li>Ravi Shankar(Email: <a href="mailto:b220043@iiit-bh.ac.in" target="_blank">b220043@iiit-bh.ac.in</a>)</li>
 						<li>Priyanshu Yadav(Email: <a href="mailto:B321058@iiit-bh.ac.in" target="_blank">B321058@iiit-bh.ac.in</a>)</li>
 						<li>Mansi Swaraj(Email: <a href="mailto:b522033@iiit-bh.ac.in" target="_blank">b522033@iiit-bh.ac.in</a>)</li>
@@ -1454,7 +1463,7 @@
 					<br>
 					<ul>
 						<li>Prof. Sanjeev Mishra</li>
-						<li>Sarada Parasad Kundu(Email: <a href="mailto:c521002@iiit-bh.ac.in" target="_blank">c521002@iiit-bh.ac.in</a>)</li>
+						<li>Sonali Sahu(Email: <a href="mailto:c519002@iiit-bh.ac.in" target="_blank">c519002@iiit-bh.ac.in</a>)</li>
 						<li>Rudransh Panighrahi(Email: <a href="mailto:b220045@iiit-bh.ac.in" target="_blank">b220045@iiit-bh.ac.in</a>)</li>
 						<li>Yash Aman Shrivastava(Email: <a href="mailto:b321077@iiit-bh.ac.in" target="_blank">b321077@iiit-bh.ac.in</a>)</li>
 						<li>Swastik Gupta(Email: <a href="mailto:b122122@iiit-bh.ac.in" target="_blank">b122122@iiit-bh.ac.in</a>)</li>
@@ -1471,7 +1480,8 @@
 					<br>
 					<ul>
 						<li>Prof. Arun Ku. Sahoo</li>
-						<li>Sarada Parasad Kundu(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Nirakar Sahoo(Email: <a href="mailto:c519001@iiit-bh.ac.in" target="_blank">c519001@iiit-bh.ac.in</a>)</li>
+						<li>Sarada Prasad Kundu(Email: <a href="mailto:c521002@iiit-bh.ac.in" target="_blank">c521002@iiit-bh.ac.in</a>)</li>
 						<li>Yash Gupta(Email: <a href="mailto:b420066@iiit-bh.ac.in" target="_blank">b420066@iiit-bh.ac.in</a>)</li>
 						<li>Ayush Kumar(Email: <a href="mailto:b321046@iiit-bh.ac.in" target="_blank">b321046@iiit-bh.ac.in</a>)</li>
 						<li>Chinmaya Kumar Sahoo(Email: <a href="mailto:b122044@iiit-bh.ac.in" target="_blank">b122044@iiit-bh.ac.in</a>)</li>
@@ -1488,6 +1498,7 @@
 					<br>
 					<ul>
 						<li>Prof. Jayanta Ku. Sahoo</li>
+						<li>Sarada Prasad Kundu(Email: <a href="mailto:c521002@iiit-bh.ac.in" target="_blank">c521002@iiit-bh.ac.in</a>)</li>
 						<li>Prashant Sarkar(Email: <a href="mailto:c122007@iiit-bh.ac.in" target="_blank">c122007@iiit-bh.ac.in</a>)</li>
 						<li>Piyush Mishra(Email: <a href="mailto:b120041@iiit-bh.ac.in" target="_blank">b120041@iiit-bh.ac.in</a>)</li>
 						<li>Pranav Swaroop Nayak(Email: <a href="mailto:b321027@iiit-bh.ac.in" target="_blank">b321027@iiit-bh.ac.in</a>)</li>
@@ -1506,6 +1517,7 @@
 					<ul>
 						<li>Prof. Puspanjali Mohapatra</li>
 						<li>Sanjaya Kumar Raj(Email: <a href="mailto:c120003@iiit-bh.ac.in" target="_blank">c120003@iiit-bh.ac.in</a>)</li>
+						<li>Ipsita Behera(Email: <a href="mailto:c122004@iiit-bh.ac.in" target="_blank">c122004@iiit-bh.ac.in</a>)</li>
 						<li>Ayusha Kar(Email: <a href="mailto:b520015@iiit-bh.ac.in" target="_blank">b520015@iiit-bh.ac.in</a>)</li>
 						<li>Swoyam Siddharth Nayak(Email: <a href="mailto:b121065@iiit-bh.ac.in" target="_blank">b121065@iiit-bh.ac.in</a>)</li>
 						<li>Ishan Singh(Email: <a href="mailto:b122056@iiit-bh.ac.in" target="_blank">b122056@iiit-bh.ac.in</a>)</li>
@@ -1523,6 +1535,7 @@
 					<ul>
 						<li>Prof. Subrat Mohanty</li>
 						<li>Sunil Samanta Singhar(Email: <a href="mailto:c119004@iiit-bh.ac.in" target="_blank">c119004@iiit-bh.ac.in</a>)</li>
+						<li>Swagatika Mohanty(Email: <a href="mailto:c521003@iiit-bh.ac.in" target="_blank">c521003@iiit-bh.ac.in</a>)</li>
 						<li>Ansh Chaturvedi(Email: <a href="mailto:b220010@iiit-bh.ac.in" target="_blank">b220010@iiit-bh.ac.in</a>)</li>
 						<li>Trideeep Ku. Tripathi(Email: <a href="mailto:b221060@iiit-bh.ac.in" target="_blank">b221060@iiit-bh.ac.in</a>)</li>
 						<li>Yaswanth Ippili(Email: <a href="mailto:b122053@iiit-bh.ac.in" target="_blank">b122053@iiit-bh.ac.in</a>)</li>
@@ -1540,6 +1553,7 @@
 					<ul>		
 						<li>Prof. Tapan Ku. Sahoo</li>	
 						<li>Madhushree Kuanr(Email: <a href="mailto:c119002@iiit-bh.ac.in" target="_blank">c119002@iiit-bh.ac.in</a>)</li>	
+						<li>Prashant Kumar Sarkar(Email: <a href="mailto:c122007@iiit-bh.ac.in" target="_blank">c122007@iiit-bh.ac.in</a>)</li>	
 						<li>Suman Sourav Biswal(Email: <a href="mailto:b520058@iiit-bh.ac.in" target="_blank">b520058@iiit-bh.ac.in</a>)</li>	
 						<li>Debi Prasad Mohapatra(Email: <a href="mailto:b321048@iiit-bh.ac.in" target="_blank">b321048@iiit-bh.ac.in</a>)</li>	
 						<li>Harsh meena(Email: <a href="mailto:b222023@iiit-bh.ac.in" target="_blank">b222023@iiit-bh.ac.in</a>)</li>	
@@ -1555,8 +1569,9 @@
                     <div>Subarnapur</div>
 					<br>
 					<ul>
-						<li>Prof. Alok Ranjan Nayak</li>
+						<li>Prof. Srichandan Sobhanayak</li>
 						<li>Sidharth Samanta(Email: <a href="mailto:c120005@iiit-bh.ac.in" target="_blank">c120005@iiit-bh.ac.in</a>)</li>
+						<li>Truptimayee Das(Email: <a href="mailto:c522002@iiit-bh.ac.in" target="_blank">c522002@iiit-bh.ac.in</a>)</li>
 						<li>Sudip Nayak(Email: <a href="mailto:b220061@iiit-bh.ac.in" target="_blank">b220061@iiit-bh.ac.in</a>)</li>
 						<li>Madhav Khandelwal(Email: <a href="mailto:b221035@iiit-bh.ac.in" target="_blank">b221035@iiit-bh.ac.in</a>)</li>
 						<li>Mayank Gupta(Email: <a href="mailto:b322029@iiit-bh.ac.in" target="_blank">b322029@iiit-bh.ac.in</a>)</li>
@@ -1574,6 +1589,7 @@
 					<ul>
 						<li>Prof.Sanjaya Saxena</li>
 						<li>Trilochan Rout(Email: <a href="mailto:c120008@iiit-bh.ac.in" target="_blank">c120008@iiit-bh.ac.in</a>)</li>
+						<li>Hitarth Sharma(Email: <a href="mailto:c522001@iiit-bh.ac.in" target="_blank">c522001@iiit-bh.ac.in</a>)</li>
 						<li>Saurav Pati(Email: <a href="mailto:b120057@iiit-bh.ac.in" target="_blank">b120057@iiit-bh.ac.in</a>)</li>
 						<li>Khitish Prasad(Email: <a href="mailto:b321020@iiit-bh.ac.in" target="_blank">b321020@iiit-bh.ac.in</a>)</li>
 						<li>Madhsmita Deep(Email: <a href="mailto:b322026@iiit-bh.ac.in" target="_blank">b322026@iiit-bh.ac.in</a>)</li>
