rayagada whatsapp link updated

--- a/index.html
+++ b/index.html
@@ -1540,7 +1540,7 @@
 						<li>Trideeep Ku. Tripathi(Email: <a href="mailto:b221060@iiit-bh.ac.in" target="_blank">b221060@iiit-bh.ac.in</a>)</li>
 						<li>Yaswanth Ippili(Email: <a href="mailto:b122053@iiit-bh.ac.in" target="_blank">b122053@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#" target="_blank">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/JZCHt9Sw7FMCZWvtatDgl9" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
