--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 	<meta name="description" content="A hybrid ideathon for higher secondary students of Odisha">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="ntUFSe18AqnePAZFrbNZ5cSVRyXndF_cBrPCwZgZ4CY" />
+
+	<meta property="og:image" content="img/Odiapreneur_OG_Image.png"/>
+	<meta property="og:url" content="https://odiapreneur.com/"/>
+    <meta property="og:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
+	<meta name="twitter:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
+	<!-- <meta name="twitter:site" content="@you"/> -->
+	<meta name="twitter:image" content="img/Odiapreneur_OG_Image.png"/>
+	<!-- <meta name="twitter:creator" content="@yourusername"/> -->
 	<!-- Css -->
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/base.css" rel="stylesheet" type="text/css" media="all" />
