--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="ntUFSe18AqnePAZFrbNZ5cSVRyXndF_cBrPCwZgZ4CY" />
 
-	<meta property="og:image" content="img/Odiapreneur_OG_Image.png"/>
+	<meta property="og:image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true"/>
 	<meta property="og:url" content="https://odiapreneur.com/"/>
     <meta property="og:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
     <meta property="og:type" content="website"/>
@@ -17,7 +17,7 @@
 	<meta name="twitter:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
 	<meta name="twitter:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
 	<!-- <meta name="twitter:site" content="@you"/> -->
-	<meta name="twitter:image" content="img/Odiapreneur_OG_Image.png"/>
+	<meta name="twitter:image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true"/>
 	<!-- <meta name="twitter:creator" content="@yourusername"/> -->
 	<!-- Css -->
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
