--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="ntUFSe18AqnePAZFrbNZ5cSVRyXndF_cBrPCwZgZ4CY" />
 
-	<meta property="og:image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true"/>
+	<meta property="og:image" itemprop="image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true"/>
 	<meta property="og:url" content="https://odiapreneur.com/"/>
     <meta property="og:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">   
+	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
 	<meta name="twitter:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
 	<!-- <meta name="twitter:site" content="@you"/> -->
