--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="ntUFSe18AqnePAZFrbNZ5cSVRyXndF_cBrPCwZgZ4CY" />
 
-	<meta property="og:image" itemprop="image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true"/>
-	<meta property="og:image:src" itemprop="image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true"/>
+	<meta property="og:image" itemprop="image" content="https://i.imgur.com/7Pe6tJS.png"/>
+	<meta property="og:image:src" itemprop="image" content="https://i.imgur.com/7Pe6tJS.png"/>
 	<meta property="og:url" content="https://odiapreneur.com/"/>
     <meta property="og:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
     <meta property="og:type" content="website"/>
@@ -20,9 +20,9 @@
 	<meta name="twitter:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
 	<meta name="twitter:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
 	<!-- <meta name="twitter:site" content="@you"/> -->
-	<meta itemprop="image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true" />
-    <meta name="twitter:image" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true" />
-    <meta name="twitter:image:src" content="https://github.com/DarthSalad/static-hackathon-site/blob/mentors/img/Odiapreneur_OG_Image.png?raw=true">
+	<meta itemprop="image" content="https://i.imgur.com/7Pe6tJS.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/7Pe6tJS.png" />
+    <meta name="twitter:image:src" content="https://i.imgur.com/7Pe6tJS.png">
 	<!-- <meta name="twitter:creator" content="@yourusername"/> -->
 	<!-- Css -->
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
