--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
-    <meta property="og:image:width" content="300">
-    <meta property="og:image:height" content="300">   
+<!--     <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">    -->
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:title" content="Odiapreneur: A unique event for higher secondary students of Odisha"/>
 	<meta name="twitter:description" content="A hybrid ideathon for higher secondary students of Odisha"/>
