Data error solved

--- a/index.html
+++ b/index.html
@@ -1317,7 +1317,7 @@
 						<li>Prof. Sabyasachi Patra</li>
 						<li>Kalpana Samal(Email: <a href="mailto:c521001@iiit-bh.ac.in" target="_blank">c521001@iiit-bh.ac.in</a>)</li>
 						<li>Pranav Patel(Email: <a href="mailto:b120044@iiit-bh.ac.in" target="_blank">b120044@iiit-bh.ac.in</a>)</li>
-						<li>Prince Pious Omm Prakash(Email: <a href="mailto:b221042@iiit-bh.ac.inb122039@iiit-bh.ac.in" target="_blank">b221042@iiit-bh.ac.inb122039@iiit-bh.ac.in</a>)</li>
+						<li>Prince Pious Omm Prakash(Email: <a href="mailto:b221042@iiit-bh.ac.in" target="_blank">b221042@iiit-bh.ac.in</a>)</li>
 						<li>Biswa Prakash Dalai(Email: <a href="mailto:b122039@iiit-bh.ac.in" target="_blank">b122039@iiit-bh.ac.in</a>)</li>
 					</ul><br>
 					<div><a href="https://chat.whatsapp.com/CB7je1QK0km7kXryhRVHxa" target="_blank">WhatsApp group link</a></div>
